--- a/src/styles/cover.css
+++ b/src/styles/cover.css
@@ -50,4 +50,18 @@
   height: 100%;
   object-fit: cover;
   z-index: 0;
+}
+
+@media (max-width: 768px) {
+    .cover-splash {
+        display: none;
+    }
+    
+    .cover {
+        padding: 20px;
+    }
+    
+    .cover-content {
+        padding: 20px 0;
+    }
 } 
